Add multi-partner logic
