# app/Http/Controllers/API/OAuth/SocialiteAPIController.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\AppBaseController;
 use App\Http\Resources\User as UserResource;
 use App\Providers\GoogleProvider;
 use App\Repositories\Dashboard\UserRepository;
+use App\Repositories\Tokens\DataTokenRepository;
 use Illuminate\Http\Request;
 use Illuminate\Support\Arr;
 use Illuminate\Support\Facades\Auth;
@@ -22,13 +23,20 @@ class SocialiteAPIController extends AppBaseController
     private $userRepository;
 
     /**
+     * @var  DataTokenRepository
+     */
+    private $dataTokenRepository;
+
+    /**
      * Create a new controller instance.
      *
      * @return void
      */
-    public function __construct( UserRepository $userRepo )
+    public function __construct( UserRepository $userRepo,
+        DataTokenRepository $dataTokenRepo )
     {
         $this->userRepository = $userRepo;
+        $this->dataTokenRepository = $dataTokenRepo;
 
         Socialite::extend( 'google', function ( $container ) {
             $config = $container[ 'config' ][ 'services.google' ];
@@ -46,6 +54,7 @@ class SocialiteAPIController extends AppBaseController
     /**
      * @param  string $provider
      * @param  \Illuminate\Http\Request $request
+     *
      * @return \Illuminate\Http\JsonResponse
      *
      * @OA\Get(
@@ -57,6 +66,14 @@ class SocialiteAPIController extends AppBaseController
      *         name="provider",
      *         required=true,
      *         in="path",
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="token",
+     *         required=true,
+     *         in="query",
      *         @OA\Schema(
      *             type="string"
      *         )
@@ -84,7 +101,11 @@ class SocialiteAPIController extends AppBaseController
      */
     public function redirect( $provider, Request $request )
     {
-        $urlRedirect = Socialite::driver( $provider )->stateless()->redirect()->getTargetUrl();
+        // validate and get token
+        $request->validate( [ 'token' => [ 'required', 'string', 'exists:data_tokens,token' ] ] );
+        $token = $request->get( 'token' );
+
+        $urlRedirect = Socialite::driver( $provider )->setState( $token )->redirect()->getTargetUrl();
 
         return $this->sendResponse( $urlRedirect, 'Provider redirect url retrieve successfully.' );
     }
@@ -92,6 +113,7 @@ class SocialiteAPIController extends AppBaseController
     /**
      * @param  string $provider
      * @param  \Illuminate\Http\Request $request
+     *
      * @return \Illuminate\Http\JsonResponse
      *
      * @OA\Get(
@@ -109,6 +131,14 @@ class SocialiteAPIController extends AppBaseController
      *     ),
      *     @OA\Parameter(
      *         name="code",
+     *         required=true,
+     *         in="query",
+     *         @OA\Schema(
+     *             type="string"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="token",
      *         required=true,
      *         in="query",
      *         @OA\Schema(
@@ -144,8 +174,12 @@ class SocialiteAPIController extends AppBaseController
      *     ),
      * )
      */
-    public function callback( $provider )
+    public function callback( $provider, Request $request )
     {
+        // validate and get token
+        $request->validate( [ 'state' => [ 'required', 'string', 'exists:data_tokens,token' ] ] );
+        $dataToken = $this->dataTokenRepository->findAndDelete( $request->get( 'state' ) );
+
         // get user info through provider
         $userProvider = Socialite::driver( $provider )->stateless()->user();
 
@@ -154,62 +188,17 @@ class SocialiteAPIController extends AppBaseController
             ->where( 'provider_id', $userProvider->getId() )
             ->first();
 
-        // to store user
-        $user = null;
-
         // if linked account exists
-        if ( $linkedSocialAccount !== null ) {
+        if ( empty( $linkedSocialAccount ) === false ) {
             $user = $linkedSocialAccount->user;
         }
         else {
-            // get user email through provider
-            $email = $userProvider->getEmail();
-
             // get user if exists
-            $user = $this->userRepository->findByField( 'email', $email )->first();
+            $user = $this->userRepository->findByField( 'email', $userProvider->getEmail() )->first();
 
             // create user if it is not created yet
-            if ( $user === null ) {
-
-                // retrieve user data according to the provider
-                switch ( $provider ) {
-                    case 'google':
-                        $userRaw = $userProvider->getRaw();
-
-                        $userData = [
-                            'name' => $userRaw[ 'given_name' ],
-                            'lastname' => $userRaw[ 'family_name' ],
-                            'email' => $email
-                        ];
-
-                        break;
-
-                    case 'facebook':
-                        $userRaw = $userProvider->getRaw();
-
-                        $userData = [
-                            'name' => $userRaw[ 'first_name' ],
-                            'lastname' => $userRaw[ 'last_name' ],
-                            'email' => $email
-                        ];
-
-                        break;
-
-                    default:
-                        $userData = [
-                            'name' => $userProvider->getName() ?? '',
-                            'lastname' => '',
-                            'email' => $email
-                        ];
-                        break;
-                }
-
-                $userData[ 'email_verified_at' ] = now();
-
-                # TODO: put here the array of accessible projects for user
-                $userData[ 'accessible_projects' ] = [ '*' ];
-
-                $user = $this->create( $userData );
+            if ( empty( $user ) === true ) {
+                $user = $this->registerUser( $userProvider, $provider, $dataToken );
             }
 
             // create linked social account for user
@@ -219,26 +208,73 @@ class SocialiteAPIController extends AppBaseController
             ] );
         }
 
-        // login with id
-        $this->guard()->loginUsingId( $user->id );
+        // scopes to which the user has access
+        $scopes = $user->getScopes();
 
-        // # ver que scopes asignar/crear
-        $scopes = [];
-
-        $accessToken = $this->guard()->user()->createToken( 'authToken', $scopes )->accessToken;
+        $accessToken = $user->createToken( 'authToken', $scopes )->accessToken;
 
         $response = [
-            'user' => new UserResource( $this->guard()->user() ),
-            'access_token' => $accessToken,
+            'user' => new UserResource( $user ),
+            'accessToken' => $accessToken,
+            'attemptedProjectAccess' => $dataToken[ 'data' ],
         ];
 
         return $this->sendResponse( $response, 'User logged successfully.' );
     }
 
     /**
+     * Registers an user with provider data.
+     *
+     * @param \Laravel\Socialite\Two\User $userProviderData
+     * @param string $provider
+     * @param \App\Models\Tokens\DataToken $dataToken
+     *
+     * @return \App\Models\Dashboard\User
+     */
+    protected function registerUser( $userProviderData, string $provider, $dataToken )
+    {
+        $userData = [
+            'email' => $userProviderData->getEmail()
+        ];
+
+        // retrieve user data according to the provider
+        switch ( $provider ) {
+            case 'google':
+                $userRaw = $userProviderData->getRaw();
+
+                $userData[ 'name' ] = $userRaw[ 'given_name' ];
+                $userData[ 'lastname' ] = $userRaw[ 'family_name' ];
+
+                break;
+
+            case 'facebook':
+                $userRaw = $userProviderData->getRaw();
+
+                $userData[ 'name' ] = $userRaw[ 'first_name' ];
+                $userData[ 'lastname' ] = $userRaw[ 'last_name' ];
+
+                break;
+
+            default:
+                $userData[ 'name' ] = $userProviderData->getName() ?? '';
+                $userData[ 'lastname' ] = '';
+
+                break;
+        }
+
+        // array of accessible prtner-projects for user
+        $userData[ 'accessible_projects' ] = [ $dataToken[ 'data' ] ];
+
+        $user = $this->create( $userData );
+
+        return $user;
+    }
+
+    /**
      * Create a new user instance after a valid registration.
      *
      * @param  array  $data
+     *
      * @return \App\Models\Dashboard\User
      */
     protected function create( array $data )
@@ -247,7 +283,7 @@ class SocialiteAPIController extends AppBaseController
             'name' => $data[ 'name' ],
             'lastname' => $data[ 'lastname' ],
             'email' => $data[ 'email' ],
-            'email_verified_at' => $data[ 'email_verified_at' ],
+            'email_verified_at' => now(),
             'accessible_projects' => $data[ 'accessible_projects' ],
         ] );
 
